force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_History__c/fields/agf__Sprint__c.field-meta.xml
<CustomField>
    <fullName>agf__Sprint__c</fullName>
    <description>New sprint value. Using text because team can be deleted</description>
    <label>Sprint</label>
    <length>18</length>
    <type>Text</type>
</CustomField>