force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_History__c/fields/agf__Sprint_Old__c.field-meta.xml
<CustomField>
    <fullName>agf__Sprint_Old__c</fullName>
    <description>Previous sprint value. Using text because team can be deleted</description>
    <label>Sprint (Old)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>