force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_History__c/fields/agf__Work__c.field-meta.xml
<CustomField>
    <fullName>agf__Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Work History</relationshipLabel>
    <relationshipName>Work_History</relationshipName>
    <type>Lookup</type>
</CustomField>